# Modern-Stylish-UI-Components

./: BUTTON.md  Button.cpp  Button.h  CHECKBOX.md  CMakeLists.txt  COMBOBOX.md  CheckBox.cpp  CheckBox.h  ComboBox.cpp  ComboBox.h  Delegate.cpp  Delegate.h  Dialog.cpp  Dialog.h  Dialog_Button.h  Image.cpp  Image.h  Label.cpp  Label.h  LineProgress.cpp  LineProgress.h  Menu.cpp  Menu.h  README.md  Rectangle.h  RoundedBox.cpp  RoundedBox.h  ScrollBar.cpp  ScrollBar.h  Seperator.cpp  Seperator.h  SmoothOpacity.cpp  SmoothOpacity.h  SmoothShadow.cpp  SmoothShadow.h  SpinnerProgress.cpp  SpinnerProgress.h  TEXTFIELD.md  Text.cpp  Text.h  (+6 more)
resources/: IconManager.cpp  Icons.h  resources.qrc
